--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,22 +2,50 @@
 title: Welcome to Middleman
 ---
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 340" class="middleman-logo" aria-labelledby="middleman-logo__title" role="img">
-  <title id="middleman-logo__title">Middleman</title>
-  <path class="middleman-logo__top-left-bar" fill-opacity=".45" d="M0 40L200 0v30L0 60z"/>
-  <path class="middleman-logo__top-right-bar" fill="#fff" d="M200 0l200 40v20L200 30z"/>
-  <path class="middleman-logo__left-m" fill-opacity=".45" d="M0 78v184l45 5V152l45 83 47-83v129l53 7V52l-57 8-43 83-43-70z"/>
-  <path class="middleman-logo__right-m" fill="#fff" d="M400 78v184l-45 5V152l-45 83-47-83v129l-53 7V52l57 8 43 83 43-70z"/>
-  <path class="middleman-logo__bottom-left-bar" fill-opacity=".45" d="M0 300l200 40v-30L0 280z"/>
-  <path class="middleman-logo__bottom-right-bar" fill="#fff" d="M200 340l200-40v-20l-200 30z"/>
-</svg>
+-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3ZBPZG"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
-<h1>
-  Middleman is Running
-</h1>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-7">
+          <div class="header-content" style="text-align: center">
+            <div class="header-content-inner">
+              <img src="img/Logo2017-v1.1-white.png" class="img-responsive" align="left">
+              <h2>Un réseau de confiance,<br>pour organiser des événements du quotidien, <br> et rentabiliser son appartement pendant ses absences</h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-5">
+          <div class="device-container">
+            <div class="device-mockup iphone6_plus portrait white">
+              <div class="device">
+                <div class="screen">
+                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
+                  <img src="img/demo-screen-1.png" class="img-responsive" alt="">
+                </div>
+                <div class="button">
+                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
 
-<%= link_to(
-  "Read Documentation",
-  "https://middlemanapp.com/basics/templating_language/",
-  target: "_blank"
-) %>
+  <section id="download" class="download bg-primary text-center">
+    <div class="container">
+      <div class="col-md-8 col-md-offset-2">
+        <h3>Rejoignez la communauté</h3>
+        <p>L'application Cookoon est disponible sur votre mobile et sur votre ordinateur</p>
+        <div class="badges">
+          <a class="badge-link" href="https://itunes.apple.com/us/app/cookoon-inside/id1291943406?mt=8"><img src="img/app-store-badge.svg" alt="Télécharger sur l'App Store"></a>
+          <a class="badge-link" href="https://play.google.com/store/apps/details?id=cookoon.cookoonandroid"><img src="img/google-play-badge.svg" alt="Télécharger sur Google Play"></a>
+        </div>
+      </div>
+    </div>
+  </section>
