--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,10 +7,14 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.title || "Middleman" %></title>
+    <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
   </head>
   <body>
     <%= yield %>
   </body>
+  <footer>
+    <p>2017 Réceptions Nouvelles. Tous droits réservés.</p>
+  </footer>
 </html>
