--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,51 +1,49 @@
 ---
-title: Welcome to Middleman
+title: Cookoon.fr
 ---
 
--- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3ZBPZG"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3ZBPZG"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
 
-  <header>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-7">
-          <div class="header-content" style="text-align: center">
-            <div class="header-content-inner">
-              <img src="img/Logo2017-v1.1-white.png" class="img-responsive" align="left">
-              <h2>Un réseau de confiance,<br>pour organiser des événements du quotidien, <br> et rentabiliser son appartement pendant ses absences</h2>
-            </div>
+<header>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-7">
+        <div class="header-content" style="text-align: center">
+          <div class="header-content-inner">
+            <img src="img/Logo2017-v1.1-white.png" class="img-responsive" align="left">
+            <h2>Un réseau de confiance,<br>pour organiser des événements du quotidien, <br> et rentabiliser son appartement pendant ses absences</h2>
           </div>
         </div>
-        <div class="col-sm-5">
-          <div class="device-container">
-            <div class="device-mockup iphone6_plus portrait white">
-              <div class="device">
-                <div class="screen">
-                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img src="img/demo-screen-1.png" class="img-responsive" alt="">
-                </div>
-                <div class="button">
-                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                </div>
+      </div>
+      <div class="col-sm-5">
+        <div class="device-container">
+          <div class="device-mockup iphone6_plus portrait white">
+            <div class="device">
+              <div class="screen">
+                <img src="img/demo-screen-1.png" class="img-responsive" alt="">
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </header>
+  </div>
+</header>
 
-  <section id="download" class="download bg-primary text-center">
-    <div class="container">
-      <div class="col-md-8 col-md-offset-2">
-        <h3>Rejoignez la communauté</h3>
-        <p>L'application Cookoon est disponible sur votre mobile et sur votre ordinateur</p>
-        <div class="badges">
-          <a class="badge-link" href="https://itunes.apple.com/us/app/cookoon-inside/id1291943406?mt=8"><img src="img/app-store-badge.svg" alt="Télécharger sur l'App Store"></a>
-          <a class="badge-link" href="https://play.google.com/store/apps/details?id=cookoon.cookoonandroid"><img src="img/google-play-badge.svg" alt="Télécharger sur Google Play"></a>
-        </div>
+<section id="download" class="download bg-primary text-center">
+  <div class="container">
+    <div class="col-md-8 col-md-offset-2">
+      <h3>Rejoignez la communauté</h3>
+      <p>L'application Cookoon est disponible sur votre mobile et sur votre ordinateur</p>
+      <div class="badges">
+        <a class="badge-link" href="https://itunes.apple.com/us/app/cookoon-inside/id1291943406?mt=8"><img src="img/app-store-badge.svg" alt="Télécharger sur l'App Store"></a>
+        <a class="badge-link" href="https://play.google.com/store/apps/details?id=cookoon.cookoonandroid"><img src="img/google-play-badge.svg" alt="Télécharger sur Google Play"></a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
