--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -1,11 +1,11 @@
 // Graphical variables
-@import "config/fonts";
-@import "config/colors";
+// @import "config/fonts";
+// @import "config/colors";
 @import "config/bootstrap_variables";
 
 // External libraries
 @import "bootstrap";
-@import "font-awesome";
+// @import "font-awesome";
 
 // Your CSS partials
 @import "layouts/index";
