--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,10 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Use the title from a page's frontmatter if it has one -->
-    <title><%= current_page.data.title || "Middleman" %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title><%= config[:site_name] + ' | ' + (current_page.data.title || config[:title]) %></title>
+    <meta name="description" content="<%= current_page.data.description || config[:description] %>">
+
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="<%= config[:site_name] %>">
+    <meta property="og:url" content="<%= current_page.data.url ? config[:host] + current_page.url : config[:host] %>">
+    <meta property="og:title" content="<%= config[:site_name] + ' | ' + (current_page.data.title || config[:title]) %>">
+    <meta property="og:description" content="<%= current_page.data.description || config[:description] %>">
+    <meta property="og:image" content="<%= config[:host] + (image_path(current_page.data.og_image || 'og_image.jpg')) %>">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="<%= config[:site_name] %>">
+    <meta name="twitter:creator" content="<%= config[:twitter] %>">
+    <meta name="twitter:title" content="<%= config[:site_name] + ' | ' + (current_page.data.title || config[:title]) %>">
+    <meta name="twitter:description" content="<%= current_page.data.description || config[:description] %>">
+    <meta name="twitter:image:src" content="<%= config[:host] + (image_path(current_page.data.og_image || 'og_image.jpg')) %>">
+
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
   </head>
