--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -5,7 +5,7 @@
 
 // External libraries
 @import "bootstrap";
-// @import "font-awesome";
+@import "font-awesome.css";
 
 // Your CSS partials
 @import "layouts/index";
