--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 // Graphical variables
-// @import "config/fonts";
-// @import "config/colors";
+@import "config/fonts";
+@import "config/colors";
 @import "config/bootstrap_variables";
 
 // External libraries
@@ -11,3 +11,29 @@
 @import "layouts/index";
 @import "components/index";
 @import "pages/index";
+
+
+// MIDDLEMAN STYLE FOR INDEX REMOVE WHEN DONE
+body {
+  background-color: #fbc547;
+  color: #333;
+  font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
+    "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
+    "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
+    "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
+  padding: 18vh 1rem;
+  text-align: center;
+}
+
+a {
+  color: rgba(#000, 0.7);
+  &:focus,
+  &:hover {
+    color: rgba(#000, 0.6);
+  }
+}
+
+.middleman-logo {
+  margin-bottom: 1rem;
+  width: 10rem;
+}
