--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,7 @@
 
 // External libraries
 @import '~bootstrap/scss/bootstrap';
+@import '~font-awesome/css/font-awesome.css';
 
 // Your CSS partials
 @import './utilities';
