--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -1,5 +1,6 @@
 .banner {
   height: 100vh;
+  overflow: hidden;
   background-color: $blue;
   background-size: cover;
   background-position: center;
