--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,8 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~font-awesome/css/font-awesome.css';
 
-// Your CSS partials
-@import './utilities';
+// Utilities
+@import 'utilities';
+
+// Components
 @import 'components/index';
