--- a/src/styles/config/bootstrap-variables.scss
+++ b/src/styles/config/bootstrap-variables.scss
@@ -10,8 +10,10 @@ $brand-success: $green;
 $brand-info: $yellow;
 $brand-danger: $red;
 $brand-warning: $orange;
+// Contrasting text color on btn-light
+$yiq-text-dark: $blue;
 
 // Buttons & inputs' radius
-$border-radius-base: 2px;
-$border-radius-large: 2px;
-$border-radius-small: 2px;
+$btn-border-radius: 2rem;
+$btn-border-radius-lg: 2.4rem;
+$btn-border-radius-sm: 1.6rem;
