--- a/src/styles/components/cookoon-nav.scss
+++ b/src/styles/components/cookoon-nav.scss
@@ -2,10 +2,6 @@
   z-index: 1;
   background-color: transparent;
   transition: background-color 0.5s ease;
-  & + .content {
-    margin-top: 0px;
-    transition: margin-top 0.5s;
-  }
   &-top {
     padding-top: 30px;
     padding-bottom: 10px;
@@ -24,7 +20,21 @@
   }
 }
 @include media-breakpoint-down(sm) {
-  .cookoon-nav-top {
-    padding-top: 0;
+  .cookoon-nav {
+    background-color: $blue;
+    & + .content {
+      margin-top: 0px;
+      transition: margin-top 0.5s ease;
+    }
+    &-top {
+      padding-top: 0px;
+      position: fixed;
+      width: 100%;
+      top: 0;
+    }
+    &-opened + .content {
+      margin-top: 120px;
+      transition: margin-top 0.5s ease;
+    }
   }
 }
