install cookoon fonts, use them in etre-membre

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,8 +6,7 @@
 // External libraries
 @import '~bootstrap/scss/bootstrap';
 @import '~font-awesome/css/font-awesome.css';
-
-// Utilities
+@import 'vendor/icons';
 @import 'utilities';
 
 // Components
