change global font-size

--- a/src/styles/config/bootstrap-variables.scss
+++ b/src/styles/config/bootstrap-variables.scss
@@ -1,6 +1,7 @@
 // General style
 // $font-family-sans-serif: $body-font;
 // $headings-font-family: $headers-font;
+$font-size-base: 0.875rem !default;
 $body-bg: $cream;
 
 // Colors
