--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,5 +1,6 @@
-@import 'banner';
-@import 'cookoon-nav';
-@import 'cta';
-@import 'device-frame';
-@import 'flip';
+@import "accordion";
+@import "banner";
+@import "cookoon-nav";
+@import "cta";
+@import "device-frame";
+@import "flip";
