--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,13 @@
 // Graphical variables
-@import 'config/fonts';
-@import 'config/colors';
-@import 'config/bootstrap-variables';
+@import "config/fonts";
+@import "config/colors";
+@import "config/bootstrap-variables";
 
 // External libraries
-@import '~bootstrap/scss/bootstrap';
-@import '~font-awesome/css/font-awesome.css';
-@import 'vendor/icons';
-@import 'utilities';
+@import "~bootstrap/scss/bootstrap";
+@import "~font-awesome/css/font-awesome.css";
+@import "vendor/icons";
+@import "utilities";
 
 // Components
-@import 'components/index';
+@import "components/index";
