--- a/src/styles/components/cookoon-nav.scss
+++ b/src/styles/components/cookoon-nav.scss
@@ -26,3 +26,11 @@
     margin-top: 120px;
   }
 }
+
+// Offset anchors
+:target:before {
+  content: '';
+  display: block;
+  height: 90px;
+  margin-top: -90px;
+}
