increase navbar font-size on mobile, whiten toggle button

--- a/src/styles/components/cookoon-nav.scss
+++ b/src/styles/components/cookoon-nav.scss
@@ -22,8 +22,11 @@
   main {
     transition: margin-top 0.5s ease;
   }
-  .cookoon-nav-opened + main {
-    margin-top: 120px;
+  .cookoon-nav {
+    font-size: 1.2rem;
+    &-opened + main {
+      margin-top: 120px;
+    }
   }
 }
 
