--- a/src/styles/components/flip.scss
+++ b/src/styles/components/flip.scss
@@ -2,6 +2,7 @@
 // entire container, keeps perspective
 .flip-container {
   perspective: 1000px;
+  cursor: pointer;
 }
 // flip the pane when hovered
 .flip-container:hover .flipper,
@@ -28,6 +29,7 @@
 .front,
 .back {
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden; // for iOS & Safari
 
   position: absolute;
   top: 0;
