implement white-paper page

--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -1,6 +1,7 @@
-@import "accordion";
-@import "banner";
-@import "cookoon-nav";
-@import "cta";
-@import "device-frame";
-@import "flip";
+@import 'accordion';
+@import 'banner';
+@import 'cookoon-nav';
+@import 'cta';
+@import 'device-frame';
+@import 'flip';
+@import 'white-paper';
