--- a/src/styles/components/cookoon-nav.scss
+++ b/src/styles/components/cookoon-nav.scss
@@ -6,7 +6,7 @@
   background-color: $blue;
   transition: background-color 0.5s ease;
   &-simple + main {
-    margin-top: 5rem !important;
+    padding-top: 5rem !important;
   }
 }
 
