update video height

--- a/src/styles/components/host-video.scss
+++ b/src/styles/components/host-video.scss
@@ -1,4 +1,10 @@
 .host-video {
   width: 100%;
-  height: 50vw;
+  height: 40vw;
+}
+
+@include media-breakpoint-only(xs) {
+  .host-video {
+    height: 50vw;
+  }
 }
