--- a/src/styles/config/bootstrap-variables.scss
+++ b/src/styles/config/bootstrap-variables.scss
@@ -2,7 +2,7 @@
 // $font-family-sans-serif: $body-font;
 // $headings-font-family: $headers-font;
 $font-size-base: 0.875rem;
-$body-bg: $cream;
+$body-bg: $white;
 
 // Colors
 $gray-base: $gray;
