--- a/src/styles/components/device-frame.scss
+++ b/src/styles/components/device-frame.scss
@@ -16,6 +16,9 @@
   .device-frame {
     width: 90%;
   }
+  .xs-frame-shadow {
+    background: linear-gradient(0deg, #f8f9fa9c, #004254);
+  }
 }
 
 @media (max-width: 320px) {
