--- a/src/components/ModalMembership/membershipModal.scss
+++ b/src/components/ModalMembership/membershipModal.scss
@@ -6,12 +6,26 @@
     max-width: 350px;
     margin: auto;
     img {
-      width: 100px;
+      width: 80px;
     }
   }
   &-actions {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: start;
+    padding: 0 20px;
+  }
+  &-action {
+    margin: 0 auto;
+    max-width: 300px;
+    a {
+      font-family: 'GFS Didot', serif;
+    }
+  }
+}
+
+@media (max-width: 767.98px) {
+  .membership-actions {
+    display: block;
   }
 }
