Align Cookoon for Business to right in navbar

--- a/src/styles/components/cookoon-nav.scss
+++ b/src/styles/components/cookoon-nav.scss
@@ -16,6 +16,14 @@
     background-color: transparent;
     padding-top: 30px;
   }
+
+  .navbar-nav {
+    display: flex;
+    width: 100%;
+    .nav-item:last-child {
+      margin-left: auto;
+    }
+  }
 }
 
 @include media-breakpoint-down(sm) {
