--- a/src/components/CookoonNav/cookoon-nav.scss
+++ b/src/components/CookoonNav/cookoon-nav.scss
@@ -2,7 +2,7 @@
   width: 100%;
   background: white;
   display: flex;
-  padding: 20px;
+  padding: 20px 0;
   justify-content: space-between;
   align-items: center;
   p {
