--- a/src/components/ImageCard/image-card.scss
+++ b/src/components/ImageCard/image-card.scss
@@ -1,7 +1,8 @@
 .image-card {
   width: 100%;
-  height: 300px;
+  height: 240px;
   background-position: center;
+  background-repeat: no-repeat;
   position: relative;
   &-text {
     background: #004254;
