Add font + anchor padding

--- a/src/components/CookoonNav/cookoon-nav.scss
+++ b/src/components/CookoonNav/cookoon-nav.scss
@@ -5,6 +5,7 @@
   padding: 20px 0;
   justify-content: space-between;
   align-items: center;
+  font-family: 'GFS Didot', serif;
   p {
     margin: 0;
   }
