--- a/src/components/ImageCard/image-card.scss
+++ b/src/components/ImageCard/image-card.scss
@@ -4,10 +4,11 @@
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
+  font-family: 'GFS Didot', serif;
   &-text {
     background: #004254;
     color: white;
-    padding: 15px 25px;
+    padding: 10px 25px;
     position: absolute;
     bottom: -15px;
     right: 15px;
