--- a/src/styles/config/fonts.scss
+++ b/src/styles/config/fonts.scss
@@ -1,4 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=GFS+Didot');
 //
-// $body-font: 'Roboto', 'Helvetica', 'sans-serif';
+$body-font: 'GFS Didot', serif;
 // $headers-font: 'Roboto', 'Helvetica', 'sans-serif';
