--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,7 +1,12 @@
 .footer {
+  padding: 10px 0 25px 0;
+  font-family: 'GFS Didot', serif;
+  p {
+    margin: 0;
+  }
   .axa-logo {
-    width: 30%;
-    height: 30%;
+    width: 40px;
+    height: 40px;
   }
   .app-logo {
     width: 50%;
