--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -16,6 +16,14 @@
   height: 7rem;
 }
 
+// Offset for anchors
+:target:before {
+  content:"";
+  display:block;
+  height:30px; /* fixed header height*/
+  margin:-30px 0 0; /* negative fixed header height */
+}
+
 .bg-extend-left:before {
   content: '';
   background-color: inherit;
