--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -4,6 +4,10 @@
   p {
     margin: 0;
   }
+  a {
+    color: black;
+    text-decoration: none;
+  }
   .axa-logo {
     width: 40px;
     height: 40px;
