Change main font from GFS Didot to EB Garamond

--- a/src/components/CookoonNav/cookoon-nav.scss
+++ b/src/components/CookoonNav/cookoon-nav.scss
@@ -5,7 +5,8 @@
   padding: 20px 0;
   justify-content: space-between;
   align-items: center;
-  font-family: 'GFS Didot', serif;
+  font-family: 'EB Garamond', serif;
+  font-size: 1.1rem;
   p {
     margin: 0;
   }
