--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   padding: 10px 0 25px 0;
-  font-family: 'GFS Didot', serif;
+  font-family: 'EB Garamond', serif;
   p {
     margin: 0;
   }
