--- a/src/styles/config/fonts.scss
+++ b/src/styles/config/fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=GFS+Didot');
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond');
 //
-// $body-font: 'GFS Didot', serif;
-$headers-font: 'GFS Didot', serif;
+// $body-font: 'EB Garamond', serif;
+$headers-font: 'EB Garamond', serif;
