--- a/src/components/BannerCard/banner-card.scss
+++ b/src/components/BannerCard/banner-card.scss
@@ -11,6 +11,6 @@
     position: relative;
     left: -15px;
     top: 200px;
-    font-family: 'GFS Didot', serif;
+    font-family: 'EB Garamond', serif;
   }
 }
