--- a/src/components/ImageCard/image-card.scss
+++ b/src/components/ImageCard/image-card.scss
@@ -4,7 +4,7 @@
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
-  font-family: 'GFS Didot', serif;
+  font-family: 'EB Garamond', serif;
   &-text {
     background: #004254;
     color: white;
