--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -28,6 +28,10 @@ h1, h2, h3, h4, h5 {
   margin:-30px 0 0; /* negative fixed header height */
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .bg-extend-left:before {
   content: '';
   background-color: inherit;
