new colors for banners

--- a/src/components/BannerCard/banner-card.scss
+++ b/src/components/BannerCard/banner-card.scss
@@ -3,7 +3,7 @@
   height: 500px;
   background-position: center;
   &-text {
-    background: #004254;
+    background: #cebd89;
     color: white;
     padding: 30px;
     min-width: 250px;
