--- a/src/styles/config/bootstrap-variables.scss
+++ b/src/styles/config/bootstrap-variables.scss
@@ -6,7 +6,7 @@ $body-bg: $white;
 
 // Colors
 $gray-base: $gray;
-$brand-primary: $blue;
+$brand-primary: gold;
 $brand-success: $green;
 $brand-info: $yellow;
 $brand-danger: $red;
