--- a/src/styles/components/banner.scss
+++ b/src/styles/components/banner.scss
@@ -1,7 +1,7 @@
 .banner {
   height: 100vh;
   overflow: hidden;
-  background-color: $blue;
+  background-color: $gold;
   background-size: cover;
   background-position: center;
   padding-top: 5rem;
