--- a/src/components/ImageCard/image-card.scss
+++ b/src/components/ImageCard/image-card.scss
@@ -6,7 +6,7 @@
   position: relative;
   font-family: 'EB Garamond', serif;
   &-text {
-    background: #004254;
+    background: #cebd89;
     color: white;
     padding: 10px 25px;
     position: absolute;
